add: linux 是怎样工作的

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,7 @@ project(c_sandbox C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(c_sandbox main.c)
+add_executable(c_sandbox
+    main.c
+    welcome.c
+)
